# 2Meat.4

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflow/: md_lint.yml
.github/workflows/: build.yml  build_and_tests.yml  grcov.yml  md_lint.yml
old_src/: commands.rs  interface.rs  main.rs
old_src/discord/: transceiver.rs
old_src/model/: arg.rs
src/: commands.rs  interface.rs  lib.rs  main.rs  prelude.rs  transceiver.rs  utils.rs
src/discord/: impl_commands.rs  interface.rs  mod.rs  receivers.rs  senders.rs  transceiver.rs  transferer.rs
src/interface/: discord.rs  mod.rs
src/model/: arg.rs  data.rs  mod.rs
