[package]
name = "two_meat_rust"
version = "0.1.0"
authors = ["Nanai10a <Nanai10a@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = ">=1.8.1"
serde = { version = ">=1.0.125", features = ["derive"] }
serde_json = ">=1.0.64"
mongodb = ">=2.0.0-alpha.1"
tokio = { version = ">=1.5.0", features = ["full"] }
dotenv = ">=0.15.0"
chrono = ">=0.4.19"
uuid = ">=0.8.2"
anyhow = ">=1.0.40"
clap = { version = ">=3.0.0-beta.2", features = ["suggestions"] }
regex = ">=1.4.5"
async-stream = ">=0.3.0"
futures-util = ">=0.3.14"
smallvec = { version = ">=1.6.1", default-features = false, features = ["serde"] }
dotenv_codegen = ">=0.15.0"

[dependencies.serenity]
version = ">=0.10.5"
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
#    "framework",
#    "standard_framework"
    "unstable_discord_api"
]
